--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13' // Use the latest version available
+    // implementation 'org.apache.httpcomponents:httpclient:4.2.6'
+    // implementation 'org.apache.httpcomponents:httpclient:4.3'
+
 }
 
 test {
